# itertools

./: Cargo.toml
src/: combinations.rs  combinations_with_replacement.rs  either_or_both.rs  exactly_one_err.rs  extrema_set.rs  flatten_ok.rs  free.rs  group_map.rs  groupbylazy.rs  grouping_map.rs  k_smallest.rs  kmerge_impl.rs  lazy_buffer.rs  lib.rs  merge_join.rs  multipeek_impl.rs  peek_nth.rs  peeking_take_while.rs  permutations.rs  powerset.rs  process_results_impl.rs  put_back_n_impl.rs  rciter_impl.rs  tee.rs
src/adaptors/: map.rs  mod.rs  multi_product.rs
src/either/: iterator.rs  mod.rs
