[package]
name = "itertools"
version = "0.12.1"

license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-itertools/itertools"
documentation = "https://docs.rs/itertools/"
authors = ["bluss"]
readme = "README.md"

description = "Extra iterator adaptors, iterator methods, free functions, and macros."

edition = "2021"
